{
    "name": "InputActions",
    "maps": [
        {
            "name": "GunsActions",
            "id": "cc4c14fb-34a3-45c3-a509-e4d68200337e",
            "actions": [
                {
                    "name": "LeftFire",
                    "type": "Button",
                    "id": "65fe846e-c9c6-41a2-bb32-886f86938120",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightFire",
                    "type": "Button",
                    "id": "66aaed8a-88ca-4822-abb2-43bf0e9c0603",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "17ec13cf-a57b-4b4d-a8e7-6ff79d4b8a4d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0750205-d4b5-4488-8f10-7ecc87034d49",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}